kustomize/base/ingress/apim-service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-apim-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: http
    nginx.ingress.kubernetes.io/permanent-redirect-code: "301"
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      set $allow_origin 'https://choreo.dev';
      if ($http_origin ~ '^https:\/\/(.*\.)?choreo\.(dev|io)$') {
        set $allow_origin $http_origin;
      }

      more_set_headers 'Access-Control-Allow-Origin: $allow_origin';
      more_set_headers 'Access-Control-Allow-Credentials: true';
      more_set_headers 'Access-Control-Allow-Methods: GET, PUT, POST, DELETE, PATCH, OPTIONS';
      more_set_headers 'Access-Control-Allow-Headers: DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization';
      more_set_headers 'Access-Control-Max-Age: 1728000';

      if ($request_method = 'OPTIONS') {
        more_set_headers 'Content-Length: 0';
        return 204;
      }
spec:
  tls:
    - hosts:
        - app.domain.com
      secretName: ingress-cert
  rules:
    - host: app.domain.com
      http:
        paths:
        - backend:
            serviceName: apim-service-svc
            servicePort: 9090
          path: /apim
