kustomize/base/ingress/grpc.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-grpc
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: grpc
    nginx.ingress.kubernetes.io/permanent-redirect-code: "301"
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  tls:
    - hosts:
        - periscope.domain.com
      secretName: ingress-cert
  rules:
  -  http:
      paths:
      - backend:
          serviceName: telemetry
          servicePort: 9090 # https://github.com/linkerd/linkerd2/issues/4211
        path: /v0_1_2.Telemetry
      - backend:
          serviceName: negotiator
          servicePort: 9090 # https://github.com/linkerd/linkerd2/issues/4211
        path: /v0_1_2.Handshake
