kustomize/base/ingress/http.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-http
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: http
    nginx.ingress.kubernetes.io/permanent-redirect-code: "301"
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://domain.com"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:$service_port;
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/custom-http-errors: "400,401,403,404,405,408,415,500,502,503,504"
spec:
  tls:
    - hosts:
        - app.domain.com
        - programanalyzer.domain.com
        - datamapper.domain.com
        - console.domain.com
      secretName: ingress-cert
  rules: # servicePort string values are replaced with numeric since nginx + linkerd does not work with string values ref: https://github.com/linkerd/linkerd2/issues/4211
    - host: app.domain.com
      http:
        paths:
        - backend:
            serviceName: linker
            servicePort: 9090
          path: /linkersec 
        - backend:
            serviceName: linker
            servicePort: 9092
          path: /linker             
        - backend:
            serviceName: appservice
            servicePort: 80
          path: /
        - backend:
            serviceName: loggingapi
            servicePort: 9097
          path: /logs/0.1.0
    - host: programanalyzer.domain.com
      http:
        paths:
        - backend:
            serviceName: programanalyzer
            servicePort: 9000
          path: /
    - host: datamapper.domain.com
      http:
        paths:
        - backend:
            serviceName: datamapper
            servicePort: 5000
          path: /
    - host: console.domain.com
      http:
        paths:
        - backend:
            serviceName: obsapi
            servicePort: 9095
          path: /graphql
        - backend:
            serviceName: frontend
            servicePort: 8080
          path: /
