kustomize/base/ingress/language-server.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://domain.com"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "10800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "10800"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/service-upstream: "true"
  name: ingress-language-server
spec:
  rules:
  - host: app.domain.com
    http:
      paths:
      - backend:
          serviceName: language-server
          servicePort: 9090
        path: /orgs/(.+)/apps/(.+)/workspace/lang-server
  tls:
  - hosts:
    - app.domain.com
    secretName: ingress-cert
