kustomize/base/ingress/root-http.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-root-http
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: http
    nginx.ingress.kubernetes.io/permanent-redirect-code: "301"
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://domain.com"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/temporal-redirect: "https://console.domain.com"
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  tls:
    - hosts:
        - domain.com
        - www.domain.com
      secretName: ingress-cert
  rules:
    - host: domain.com
      http:
        paths:
        - backend:
            serviceName: choreowww
            servicePort: 8080
          path: /
    - host: www.domain.com
      http:
        paths:
        - backend:
            serviceName: choreowww
            servicePort: 8080
          path: /
